fixed underline on mobile

--- a/style.css
+++ b/style.css
@@ -160,7 +160,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden
+    overflow: hidden;
+    margin-top: 30px;
 }
 
 .card-text {
@@ -256,6 +257,7 @@ body {
         padding: 13%;
         padding-bottom: 0;
         padding-top: 0;
+        margin-top: 30px;
     }
     .skillsIcons2 {
         flex-direction: row;
